--- a/src/main/resources/floodlightdefault.properties
+++ b/src/main/resources/floodlightdefault.properties
@@ -1,6 +1,6 @@
 floodlight.modules = net.floodlightcontroller.storage.memory.MemoryStorageSource,\
 net.floodlightcontroller.staticflowentry.StaticFlowEntryPusher,\
-net.floodlightcontroller.forwarding.Forwarding,\
+net.floodlightcontroller.learningswitch.LearningSwitch,\
 net.floodlightcontroller.jython.JythonDebugInterface,\
 net.floodlightcontroller.counter.CounterStore,\
 net.floodlightcontroller.perfmon.PktInProcessingTime,\
@@ -10,3 +10,4 @@ net.floodlightcontroller.restserver.RestApiServer.port = 8080
 net.floodlightcontroller.core.FloodlightProvider.openflowport = 6633
 net.floodlightcontroller.jython.JythonDebugInterface.port = 6655
 net.floodlightcontroller.odin.master.OdinMaster.poolFile = poolfile
+net.floodlightcontroller.odin.master.OdinMaster.clientList = clientList
